--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,6 +4,20 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
+* ***2015 – 2018***       Mentored underprivileged kids as a part of Make a difference, non-government organization (NGO), India        
+* ***2015 - 2018***       Mentored High school students in life sciences                                                             
+* ***2019 - Present***    Teaching assistant for Veterinary Immunology course (VMED-680)
+
+---
+**Tutored DVM students, Professional Program in Veterinary Medicine (2019)**
+* Kaylee Pothoff
+* Sarah Schuelke
+* Hannah Evans
+
+---
+**Taught molecular biology techniques and disease inducing protocols to post-doctoral fellows**
+* Dr.Sabarirajan Jayaraja (Dr.Jay Reddy’s Laboratory)
+* Dr.Paul Velander (Dr.Amanda-Ramer-Tait’s Laboratory)
 
 {% include base_path %}
 
